@@ -1,5 +1,11 @@
 2003-07-04  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
+	* elf32-sh.c (sh_elf_create_dynamic_sections): Return if dynamic
+	sections were created already.  Remove unnecessary tests of
+	the previous change.
+
+2003-07-04  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
 	* elf32-sh.c (sh_elf_create_dynamic_sections): Don't call
 	bfd_make_section for existing sections.
 
